# pydantic-tensorstore

./: .copier-answers.yml  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml
examples/: advanced_usage.py  basic_usage.py
src/pydantic_tensorstore/: __init__.py  _types.py  _validators.py  validators.py
src/pydantic_tensorstore/_core/: __init__.py  chunk_layout.py  codec.py  context.py  schema.py  spec.py
src/pydantic_tensorstore/_drivers/: __init__.py  array.py  auto.py  n5.py  neuroglancer_precomputed.py  tiff.py  zarr.py  zarr3.py
src/pydantic_tensorstore/_kvstore/: __init__.py  base.py  file.py  memory.py  s3.py
src/pydantic_tensorstore/core/: __init__.py  _union.py  chunk_layout.py  codec.py  context.py  schema.py  spec.py  transform.py
src/pydantic_tensorstore/drivers/: __init__.py  array.py  n5.py  neuroglancer_precomputed.py  zarr.py  zarr3.py
src/pydantic_tensorstore/kvstore/: __init__.py  base.py  file.py  memory.py  s3.py
src/pydantic_tensorstore/types/: __init__.py  common.py
src/pydantic_tensorstore/utils/: __init__.py  builders.py  conversion.py  introspection.py
src/pydantic_tensorstore/validation/: __init__.py  errors.py  validators.py
tests/: test_array_spec.py  test_examples.py  test_pydantic_tensorstore.py  test_spec_validation.py  test_tensorstore.py
